# smart-inbox-prototype

./: .gitignore  CLAUDE.md  LLMS.md  PROJECT_DEPENDENCIES.md  README.md  ROADMAP.md  SETUP.md  SETUP_OAUTH_IN_NEW_PROJECT.md  __init__.py  check_secret_source.py  debug_gmail_auth.py  dev.sh  get_token_manual.py  main.py  pyproject.toml  start.sh  test_classification.py  test_enhanced_classification.py  verify_auth_yourself.sh
.direnv/python-3.12.3/: pyvenv.cfg
experiments/: dev_sh_fix.md
scripts/: __init__.py  create_oauth_token.py  create_watch.py  get_refresh_token.py
src/: __init__.py  config.py  constants.py  main.py
src/providers/: __init__.py
